3 fixing button alignment and homepage margins

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,7 +2,7 @@
     &__title {
         text-align: center;
         text-transform: uppercase;
-        margin: 15vh auto 0;
+        margin: 10vh auto 0;
         max-width: 75%;
         letter-spacing: 7px;
         line-height: 1.5;
@@ -11,7 +11,7 @@
     &__action {
         display: flex;
         justify-content: space-around;
-        margin: 15vh auto 0;
+        margin: 20vh auto 2vh;
         max-width: 75%;
     }
 }
