--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -6,7 +6,9 @@
     color: $black;
     font-size: 32px;
     padding: 12px 16px;
+    text-align: center;
     text-transform: uppercase;
+    min-width: 200px;
 }
 
 .button-link:hover {
